# ComputerV1

./: CMakeLists.txt  TODO.txt  build.sh  clean.sh
Runner/: main.cpp
Sources/: Adapter.cpp  Adapter.hpp  Chunk.hpp  Parser.cpp  Parser.hpp  Shower.cpp  Shower.hpp  Simplifier.cpp  Simplifier.hpp  Solver.cpp  Solver.hpp  Utils.cpp  Utils.hpp
Tests/: Adapter.cpp  Parser.cpp  Simplifier.cpp  Solver.cpp  Utils.cpp
